hphp/test/slow/parser/hh-namespace-conflict-4.php.expectf

Fatal error: Cannot declare class Blah\string because the name was explicitly used earlier via a `use' statement on line 3: (Line: 4, Char: 17) in %s on line 4
